--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <p class="user-stat">0</p>
           <p class="vs">:</p>
           <p class="comp-stat">0</p>
-          <h2>Comp</h2>
+          <h2>COMP</h2>
         </article>
 
         <article class="action">
